# Butcher-circus-randomizer

./: .clang-format  .clang-tidy  .gitignore  Butcher_Circus_Randomizer.pro  CMakeLists.txt  CMakePresets.json  Doxyfile  README.MD  description.cpp  description.h  description.ui  heroselection.h  heroselection.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  vcpkg-configuration.json
assets/: resources.qrc
assets/trinkets/: list.txt
docs/html/: Tricky-example.html  annotated.html  asset__manager_8cpp.html  asset__manager_8cpp__incl.map  asset__manager_8cpp__incl.md5  asset__manager_8hpp.html  asset__manager_8hpp__dep__incl.map  asset__manager_8hpp__dep__incl.md5  asset__manager_8hpp__incl.map  asset__manager_8hpp__incl.md5  asset__manager_8hpp_source.html  centralwidget_8h.html  centralwidget_8h__dep__incl.map  centralwidget_8h__dep__incl.md5  centralwidget_8h__incl.map  centralwidget_8h__incl.md5  centralwidget_8h_source.html  classAssetManagerSingletone-members.html  classAssetManagerSingletone.html  classCentralWidget-members.html  classCentralWidget.html  classCentralWidget__coll__graph.map  classCentralWidget__inherit__graph.md5  classHeroSelection-members.html  classHeroSelection.html  classHeroSelection__coll__graph.map  classHeroSelection__coll__graph.md5  classHeroSelection__inherit__graph.map  classHeroSelection__inherit__graph.md5  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classRandom-members.html  classRandom.html  classRandomMaster-members.html  classRandomMaster.html  classRandom_1_1Tricky-members.html  classRandom_1_1Tricky.html  classRandomizeRules-members.html  (+188 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  (+35 more)
forms/: mainwindow.ui
include/: Random.h  centralwidget.h  config.h  filemanip.h  heroselection.h  mainwindow.h  random.h
src/: asset_manager.cpp  asset_manager.hpp  filemanip.cpp  filemanip.h  filemanip_windows.cpp  heroselection.cpp  heroselection.h  main.cpp  mainwindow.cpp  mainwindow.h  random_master.cpp  random_master.hpp  randomize_rules.cpp  randomize_rules.hpp  squad_abstract_widget.cpp  squad_abstract_widget.hpp  squad_competitive_widget.cpp  squad_competitive_widget.hpp  squad_normal_widget.cpp  squad_normal_widget.hpp
srcpp/: filemanip.cpp  filemanip_windows.cpp  heroselection.cpp  main.cpp  mainwindow.cpp
test/: CMakeLists.txt
test/src/: filemanip.cpp  random.cpp  t_asset_manager.cpp  t_filemanip.cpp  t_filemanip.hpp  t_random_master.cpp  t_randomize_rules.cpp  t_randomize_rules.hpp
tests/: CMakeLists.txt  filemanip.cpp
tests/default/: default.bg
tests/default/Tests.39fdec11/: Tests
tests/src/: filemanip.cpp  random.cpp
